--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,76 @@
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+certifi==2022.12.7
+chardet==3.0.4
+colorama==0.4.6
+comm==0.1.2
+contourpy==1.0.7
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.2.0
+fastjsonschema==2.16.2
+fonttools==4.38.0
+idna==2.8
+ipykernel==6.21.1
+ipython==8.9.0
+ipython-genutils==0.2.0
+jdcal==1.4.1
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter-client==7.2.0
+jupyter_core==5.2.0
+jupyterlab-pygments==0.2.2
+jupyterthemes==0.20.0
+kiwisolver==1.4.4
+lesscpy==0.15.1
+MarkupSafe==2.1.2
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
+mistune==2.0.5
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
 notebook==6.0.3
-pytz==2019.3
-python-dateutil==2.8.1
-requests==2.22.0
+numpy==1.24.2
 openpyxl==3.0.3
+packaging==23.0
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.0.0
+ply==3.11
+prometheus-client==0.16.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
+pure-eval==0.2.2
+Pygments==2.14.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.1
+pytz==2019.3
+pywin32==305
+pywinpty==2.0.10
+pyzmq==25.0.0
+requests==2.22.0
+Send2Trash==1.8.0
+six==1.16.0
+soupsieve==2.3.2.post1
+stack-data==0.6.2
+terminado==0.17.1
+tinycss2==1.2.1
+tornado==6.2
+traitlets==5.9.0
+urllib3==1.25.11
+wcwidth==0.2.6
+webencodings==0.5.1
 xlrd==1.2.0
